# nggedhekake-gambar

./: CONTEXT.md  Cargo.toml  DESIGN.md  Dioxus.toml  PRODUCT.md  README.md
.scratch/image-upscaler-v1/: PRD.md
.scratch/image-upscaler-v1/issues/: 01-select-validate-preview.md  02-approve-distribution-licenses.md  03-establish-release-identity.md  04-upscale-2x-unsaved-result.md  05-save-normalized-result.md  06-swipe-result-comparison.md  07-safe-4x-processing.md  08-illustration-model-option.md  09-cancel-and-clean-run.md  10-protect-unsaved-result.md  11-private-preferences-updates.md  12-diagnostics-support-export.md  13-accessibility-interaction-review.md  14-ship-macos-dmg.md  15-ship-windows-msi.md  16-ship-linux-appimage.md  17-certify-cross-platform-release.md
assets/: styles.css
crates/upscale-contract/: Cargo.toml
crates/upscale-contract/src/: lib.rs
docs/: PRD.md  design-system.md
src/: app.rs  controller.rs  lib.rs  main.rs  source.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/upscale/: engine.rs  files.rs  mod.rs  state.rs
src/components/: image_slider.rs  main_content.rs  mod.rs  sidebar.rs
ui/: app-window.slint
