[package]
name = "nggedhekake-gambar-ui"
version = "0.1.0"
edition = "2024"
description = "A private, native image upscaler powered by Real-ESRGAN, NCNN, and Vulkan"
license = "AGPL-3.0-only"
repository = "https://github.com/bangadam/nggedhekake-gambar"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-logger = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[workspace]
members = ["src-tauri"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
