[package]
name = "nggedhekake-gambar"
version = "0.1.0"
description = "Tauri backend for the Nggedhekaké Gambar image upscaler"
authors = ["bangadam"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/bangadam/nggedhekake-gambar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nggedhekake_gambar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
upscale-contract = { package = "nggedhekake-gambar-contract", path = "../crates/upscale-contract" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
fs2 = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
tauri-plugin-clipboard-manager = "2"

[dev-dependencies]
tempfile = "3"

